<resources>
    <string name="callUnanswered_forwarded">Call unanswered and forwarded</string>
    <string name="mwi_notification_title">Message Wait Indicator</string>
    <string name="mwi_notification_summary">Show message wait indicator voicemail notifications</string>
    <string name="preferred_network_mode_lte_cdma_evdo_summary">Preferred network mode: LTE / CDMA / EvDo</string>
    <string name="preferred_network_mode_lte_gsm_summary">Preferred network mode: LTE / GSM/WCDMA</string>
    <string name="preferred_network_mode_lte_cdma_evdo_gsm_wcdma_summary">Preferred network mode: LTE / CMDA / EvDo / GSM/WCDMA</string>
    <string name="preferred_network_mode_lte_wcdma_summary">Preferred network mode: LTE / WCDMA</string>
    <string name="card_title_dialing_waiting">Dialing (waiting…)</string>
    <string name="card_title_waiting_call">Waiting call</string>
    <string name="call_notif_unconditionalCF">Unconditional call forwarding active</string>
    <string name="call_notif_conditionalCF">Conditional call forwarding active</string>
    <string name="call_notif_MOcall_forwarding">Outgoing call is forwarded</string>
    <string name="call_notif_cugcall">Call in closed user group</string>
    <string name="call_notif_outgoing_barred">Outgoing calls barred</string>
    <string name="call_notif_incoming_barred">Incoming calls barred at remote party</string>
    <string name="call_notif_clir_suppression_rejected">Own number suppression rejected by network</string>
    <string name="call_notif_call_deflected">Call forwarded by remote party</string>
    <string name="call_notif_MTcall_forwarding">Incoming call is forwarded</string>
    <string name="call_notif_multipartycall">Multi-party call</string>
    <string name="call_notif_callonhold_released">Call released remotely</string>
    <string name="call_notif_forwardcheckreceived">Call was forwarded</string>
    <string name="call_notif_callconnectingect">Call connecting through explicit call transfer</string>
    <string name="call_notif_callconnectedect">Call connected through explicit call transfer</string>
    <string name="incall_call_type_label_forwarded">Forwarded call</string>
    <string name="dialer_ui_settings_title">Dialpad settings</string>
    <string name="dialer_ui_settings_summary">Settings for the dialpad</string>
    <string name="noise_suppression_title">Noise suppression</string>
    <string name="noise_suppression_summary">Enable noise suppression for calls</string>
    <string name="advanced_setting">Advanced Settings</string>
    <string name="vibrate_outgoing">Vibrate on answer</string>
    <string name="vibrate_call_waiting">Vibrate on call waiting</string>
    <string name="vibrate_hangup">Vibrate on hang up</string>
    <string name="vibrate_45">Vibrate every minute</string>
    <string name="vibrate_45_sum">Vibrates at the 45 second mark of every minute during outgoing calls</string>
    <string name="rejected_as_missed">Rejected calls as missed</string>
    <string name="rejected_as_missed_sum">"Mark rejected calls as 'missed' rather than 'incoming' in the call log"</string>
    <string name="show_ssn_label">Event notification</string>
    <string name="show_ssn_summary">Show a notification for various network events related to call handling</string>
    <string name="calllog_after_call">Show log</string>
    <string name="calllog_after_call_summary">Show the call log after ending a call</string>
    <string name="national_roaming">National data roaming</string>
    <string name="national_roaming_summary">Connect to data services when nationally roaming</string>
    <string name="perm_change_mobile_network">Change network (2G/3G)</string>
    <string name="perm_change_mobile_network_desc">Application with this permission can, at any time, change between 2G data and 3G data. 3G is faster, consumes more battery, and can also cost you more money.</string>
    <string name="flip_action_title">Flip action</string>
    <string name="flip_action_dialog_title">Flip device to…</string>
    <string name="flip_action_summary">Flipping the phone down will %s</string>
    <string name="blacklist_title">Blacklist</string>
    <string name="enable_blacklist_title">Enable blacklist</string>
    <string name="blacklist_summary_disabled">Disabled</string>
    <string name="blacklist_summary">Incoming calls from phone numbers in the blacklist will be blocked</string>
    <string name="blacklist_notify">Show notification</string>
    <string name="blacklist_private_numbers_title">Private numbers</string>
    <string name="blacklist_private_numbers_summary">Block incoming calls from private numbers</string>
    <string name="blacklist_unknown_numbers_title">Unknown numbers</string>
    <string name="blacklist_unknown_numbers_summary">Block incoming calls from numbers not in the contact list</string>
    <string name="blacklist_regex_title">Use wildcards</string>
    <string name="blacklist_regex_summary">Use . as a wildcard and * for repetition. E.g. 123.* blocks numbers starting with 123 and .*123.* blocks numbers containing 123</string>
    <string name="add_blacklist_number">Add phone number</string>
    <string name="add_to_blacklist">Add to blacklist</string>
    <string name="add_to_blacklist_message">Future calls from %s will be blocked</string>
    <string name="remove_blacklist_number_title">Remove number</string>
    <string name="remove_blacklist_number">Do you want to remove %s from the blacklist?</string>
    <string name="blacklist_notification">Blocked a call from %s</string>
    <string name="blacklist_notification_private_number">Blocked a call from a private number</string>
    <string name="blacklist_notification_list_private">Private</string>
    <string name="blacklist_notification_unknown_number">Blocked unknown number %s</string>
    <string name="blacklist_notification_multiple">%d calls were blocked</string>
    <string name="unblock_number">Unblock</string>
    <string name="onscreenBlacklistText">Blacklist</string>
    <string name="voice_quality_preferences_title">Voice quality</string>
    <string name="voice_quality_summary">Using profile: %s</string>
    <string name="voice_quality_entry_normal">Normal</string>
    <string name="voice_quality_entry_clear">Clear</string>
    <string name="voice_quality_entry_crisp">Crisp</string>
    <string name="voice_quality_entry_bright">Bright</string>
    <string name="phone_number_label">My phone number</string>
    <string name="phone_number_summary">Set the phone number for this device</string>
    <string name="msisdn_alpha_tag">Voice Line 1</string>
    <string name="enter_input" formatted="false">USSD message must be between %d and %d characters. Please try again.</string>
    <string name="throttle_status_subtext">"%1$s (%2$d٪) of %3$s period maximum
Next period starts in %4$d days (%5$s)"</string>
    <string name="throttle_time_frame_subtext">"%1$d٪ of cycle elapsed
Next period starts in %2$d days (%3$s)"</string>
    <string name="throttle_data_usage_subtext">%1$s (%2$d٪) of %3$s period maximum</string>
    <string name="in_call_noise_suppression_audioparameter">noise_suppression=on=off</string>
    <string name="voice_quality_param" />
    <string name="phoneAppLabel">Phone</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_timedOut">No response, timed out</string>
    <string name="callFailed_server_unreachable">Server unreachable</string>
    <string name="callFailed_number_unreachable">Number unreachable</string>
    <string name="callFailed_invalid_credentials">Incorrect username or password</string>
    <string name="callFailed_out_of_network">Called from out-of-network</string>
    <string name="callFailed_server_error">Server error. Try again later.</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">"You can't make outgoing calls while call barring is on."</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_unobtainable_number">Invalid number</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="ok">OK</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running…</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">"Send the following tones?
"</string>
    <string name="pause_prompt_str">"Sending tones
"</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto-retry</string>
    <string name="auto_retry_mode_summary">Enable Auto-retry mode</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="voicemail_provider">Service</string>
    <string name="voicemail_settings">Setup</string>
    <string name="other_settings">Other call settings</string>
    <string name="respond_via_sms_setting_title">Quick responses</string>
    <string name="respond_via_sms_setting_summary" />
    <string name="voicemail_notification_vibrate_when_title">Vibrate</string>
    <string name="voicemail_notification_ringtone_title">Sound</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="vibrate_on_ring_title">Vibrate when ringing</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="preference_category_ringtone">Ringtone &amp; Vibrate</string>
</resources>